--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,7 +1,7 @@
 # Production Environment Configuration for MindEase Frontend
 
 # API Configuration
-REACT_APP_API_BASE_URL=${REACT_APP_API_BASE_URL}
+REACT_APP_API_BASE_URL=https://blue-moss-0657c250f.3.azurestaticapps.net
 REACT_APP_ENVIRONMENT=production
 
 # Application Configuration
