--- a/.github/workflows/azure-static-web-apps-ci-cd.yml
+++ b/.github/workflows/azure-static-web-apps-ci-cd.yml
@@ -42,9 +42,8 @@ jobs:
       - name: Build frontend
         run: |
           cd frontend
-          npm run build
+          CI=false npm run build
         env:
-          CI: false
           REACT_APP_API_BASE_URL: ${{ secrets.REACT_APP_API_BASE_URL }}
           REACT_APP_ENVIRONMENT: production
 
@@ -70,6 +69,10 @@ jobs:
           api_location: "/backend"
           output_location: "build"
         env:
+          # Build Configuration
+          CI: false
+          DISABLE_ESLINT_PLUGIN: true
+          
           # Azure OpenAI Configuration
           AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
           AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
