--- a/backend/package.json
+++ b/backend/package.json
@@ -2,32 +2,20 @@
   "name": "mindease-backend",
   "version": "1.0.0",
   "description": "MindEase Mental Health Chatbot Backend API",
-  "main": "dist/server-minimal.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node dist/server-minimal.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server-minimal.ts",
-    "build": "tsc --build --force",
+    "start": "node server.js",
+    "dev": "node server.js",
+    "build": "echo \"No build needed for JavaScript\" && exit 0",
     "test": "echo \"Tests will be implemented later\" && exit 0",
     "test:watch": "echo \"Tests will be implemented later\" && exit 0"
   },
   "dependencies": {
-    "@azure/ai-language-text": "^1.1.0",
-    "@azure/ai-text-analytics": "^5.1.0",
-    "@azure/identity": "^4.0.1",
-    "@azure/keyvault-secrets": "^4.7.0",
-    "@azure/openai": "^1.0.0-beta.8",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "microsoft-cognitiveservices-speech-sdk": "^1.34.1",
-    "multer": "^1.4.5-lts.1",
-    "redis": "^4.6.11",
-    "sqlite3": "^5.1.6",
-    "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
