--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+package-lock.json
 
 # Environment variables
 .env
@@ -12,109 +10,31 @@ yarn-error.log*
 .env.production.local
 
 # Build outputs
-frontend/build/
-backend/dist/
+dist/
+build/
 *.tsbuildinfo
-
-# Database files
-*.db
-*.sqlite
-*.sqlite3
-data/
-backups/
 
 # Logs
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# IDE files
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# OS generated files
+# OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Temporary files
-tmp/
-temp/
+# Testing
+coverage/
 
-# Azure Functions
-local.settings.json
-bin/
-obj/
-
-# Encryption keys (never commit these)
-*.key
+# Misc
 *.pem
-*.p12
-*.pfx
-
-# Test files
-test-results/
-playwright-report/
-test-results.xml
+.cache/
