--- a/backend/package.json
+++ b/backend/package.json
@@ -1,41 +1,36 @@
 {
   "name": "mindease-backend",
-  "version": "1.0.0",
-  "description": "MindEase Mental Health Chatbot Backend API",
-  "main": "server.js",
+  "version": "2.0.0",
+  "description": "MindEase Mental Health Chatbot Backend API - Privacy-First with Anthropic",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js",
-    "build": "echo \"No build needed for JavaScript\" && exit 0",
-    "test": "echo \"Tests will be implemented later\" && exit 0",
-    "test:watch": "echo \"Tests will be implemented later\" && exit 0"
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only -r dotenv/config src/server.ts",
+    "build": "tsc",
+    "test": "echo \"Tests will be implemented later\" && exit 0"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.27.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "openai": "^4.20.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.8",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
-    "@types/sqlite3": "^3.1.11",
     "@types/uuid": "^9.0.7",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   },
   "keywords": [
     "mental-health",
     "chatbot",
-    "azure-ai",
+    "anthropic",
+    "privacy-first",
     "nodejs",
     "express"
   ],
