--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,43 +1,17 @@
 # MindEase Frontend Environment Configuration
 
 # API Configuration
-REACT_APP_API_BASE_URL=http://localhost:3001/api/v1
-REACT_APP_WS_URL=ws://localhost:3001
+REACT_APP_API_BASE_URL=http://localhost:3001
 
 # Application Configuration
 REACT_APP_NAME=MindEase
-REACT_APP_VERSION=1.0.0
+REACT_APP_VERSION=2.0.0
 REACT_APP_ENVIRONMENT=development
 
 # Feature Flags
 REACT_APP_ENABLE_VOICE=true
-REACT_APP_ENABLE_MULTILINGUAL=false
-REACT_APP_ENABLE_ANALYTICS=true
-REACT_APP_ENABLE_PWA=true
-
-# Azure Services (Client-side features)
-REACT_APP_AZURE_SPEECH_REGION=eastus
-REACT_APP_AZURE_SPEECH_SUBSCRIPTION_KEY=your-speech-key-here
-
-# Security Configuration
-REACT_APP_ENABLE_HTTPS=false
-REACT_APP_SESSION_TIMEOUT=1440
-
-# UI Configuration
-REACT_APP_DEFAULT_THEME=light
-REACT_APP_ENABLE_DARK_MODE=true
-REACT_APP_DEFAULT_LANGUAGE=en
 
 # Crisis Support Configuration
 REACT_APP_CRISIS_HOTLINE=988
 REACT_APP_CRISIS_TEXT=741741
 REACT_APP_EMERGENCY_CONTACT=911
-
-# Analytics Configuration (Optional)
-REACT_APP_GOOGLE_ANALYTICS_ID=your-ga-id-here
-REACT_APP_ENABLE_ERROR_REPORTING=true
-
-# Development Configuration
-REACT_APP_ENABLE_DEBUG=true
-REACT_APP_MOCK_API=false
-REACT_APP_SHOW_PERFORMANCE_METRICS=true
